# robot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
include/colorize/: colorize.hpp
include/robot/controller/remote/: HandlersInterface.hpp
src/: main.cpp  main.hpp  main.hpp.in
src/Robot/: Application.cpp  Application.hpp
src/robot/: Application.cpp  Application.hpp
src/robot/application/: State.cpp  State.hpp
src/robot/application/feature/: Interface.hpp  Remote.cpp  Remote.hpp
src/robot/controller/: Remote.cpp  Remote.hpp
src/robot/controller/remote/handler/: Test.cpp  Test.hpp
src/robot/logger/: Console.cpp  Console.hpp
